--- a/note/templates/base.html
+++ b/note/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width" >
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% load static %}
     <link rel="stylesheet" href="{% static "index.css" %}">
@@ -10,7 +10,7 @@
       
     {% endblock title %}</title>
 </head>
-<body data-bind="event:{dblclick: lookup}">
+<body >
     <div id="menu">
         <a href="{% url 'note' %}">note</a>
         <a href="{% url 'file' %}">file</a>
