--- a/note/templates/base.html
+++ b/note/templates/base.html
@@ -11,15 +11,21 @@
     {% endblock title %}</title>
 </head>
 <body >
-    <div id="menu">
-        <a href="{% url 'note' %}">note</a>
-        <a href="{% url 'file' %}">file</a>
-        <a href="{% url 'help' %}">help</a>
-        <a href="{% url 'userhome' %}">login</a>
-        <a href="{% url 'logout' %}">logout</a>
+    <div id='main'>
+        <div id="menubar" class="flex-container">
+            <a href="{% url 'note' %}">note</a>
+            <a href="{% url 'file' %}">file</a>
+            <a href="{% url 'help' %}">help</a>
+            <span id='logbar'>
+                <a href="{% url 'userhome' %}">login</a>
+                <!-- <a href="{% url 'logout' %}">logout</a> -->
+            </span>
+            
+        </div>
+        {% block body %}
+          
+        {% endblock body %}
     </div>
-    {% block body %}
-      
-    {% endblock body %}
+    
 </body>
 </html>
