--- a/note/static/index.css
+++ b/note/static/index.css
@@ -1,7 +1,19 @@
-body{
-    margin-left: 10%;
-    margin-right: 20%;
-}
+@media only screen and (min-width: 500px) {
+    #main{
+        margin-left: 20%;
+    }
+    
+    #menubar>a{
+        margin-left: 20px;
+        margin-top: 25px;
+        margin-right: 6%;
+        text-decoration: none;
+        color: grey;
+        position: relative;
+        left: 17%;
+    }
+  }
+
 #main{
     position: relative;
     min-width: 380px;
@@ -32,6 +44,8 @@ body{
 }
 
 textarea {
+    width: 343px;
+    font-size: smaller;
     min-width: 98%;
     border-color: lightblue;
     border-width: 2px;
@@ -60,7 +74,7 @@ form{
     margin-right: 0;
     border: lightblue solid 2px;
     margin-bottom: 10px;
-    height: 20px;
+    height: 30px;
 }
 
 .formsubmit{
@@ -71,7 +85,7 @@ form{
     background-color: lightcyan;
     border-width: 1px;
     
-    height: 25px;
+    height: 35px;
 }
 
 
@@ -97,18 +111,27 @@ form{
 }  */
 
 #menubar{
+    background-color: lightcyan;
+    height: 80px;
+    width: 120%;
     margin-bottom: 30px;
-    margin-top: 30px;
+    margin-top: 0;
+    position: relative;
+    right: 20px;
+    bottom: 10px;
+    padding-left: 15px;
 }
 #menubar>a{
-    margin-right: 15px;
+    margin-left: 7px;
+    margin-top: 37px;
+    margin-right: 2%;
     text-decoration: none;
     color: grey;
 }
 #logbar{
-    
+    margin-top: 35px;
     position: absolute;
-    right: 10%;
+    right: 15%;
     margin-left: 0;
     text-align: right;
 }
@@ -120,7 +143,8 @@ form{
 }
 
 .tool > button{
-    background-color: lightcyan;
+    opacity: 0.6;
+    background-color: transparent;
     border-width: 0;
 }
 
