--- a/note/static/index.css
+++ b/note/static/index.css
@@ -1,22 +1,25 @@
+body{
+    margin:0;
+}
+
 @media only screen and (min-width: 500px) {
     #main{
         margin-left: 20%;
     }
     
-    #menubar>a{
+    #menubar>*{
         margin-left: 20px;
         margin-top: 25px;
         margin-right: 6%;
         text-decoration: none;
         color: grey;
-        position: relative;
-        left: 17%;
     }
   }
 
 #main{
     position: relative;
-    min-width: 380px;
+    min-width: 360px;
+    padding-left: 10px;
 }
 
 #userstatus{
@@ -58,12 +61,12 @@ textarea {
 }
 
 .dict>iframe {
-    min-width: 500px;
+    min-width: 375px;
     min-height: 400px;
 }
 
 form{
-    position: relative;
+    position: ;
     padding: 0;
     margin-right: 0;
     width: 350px;
@@ -78,7 +81,7 @@ form{
 }
 
 .formsubmit{
-    position: absolute;
+    position: ;
     right: 0;
     width:60px;
     bottom: 10px;
@@ -113,33 +116,45 @@ form{
 #menubar{
     background-color: lightcyan;
     height: 80px;
-    width: 120%;
+    width: 100%;
     margin-bottom: 30px;
     margin-top: 0;
-    position: relative;
-    right: 20px;
-    bottom: 10px;
-    padding-left: 15px;
 }
 #menubar>a{
-    margin-left: 7px;
     margin-top: 37px;
-    margin-right: 2%;
+    margin-right: 4%;
     text-decoration: none;
     color: grey;
 }
-#logbar{
-    margin-top: 35px;
-    position: absolute;
-    right: 15%;
-    margin-left: 0;
-    text-align: right;
-}
-#logbar>a{
-    margin-right: 10px;
+
+#menubar>button{
+    margin-left: 5px;
+    margin-top: 40px;
     text-decoration: none;
-    font-size: smaller;
+    color: grey;
+    background-color: lightcyan;
+    border:none;
+}
+
+#menubar>button:hover > span{
+    display:inherit;
+    
+}
+#menubar>button>span{
+    text-align: left;
+}
+#logbar{
+    display: none;
+    position: absolute;
+    left: 0;
+    font-size: small;
+}
+
+#logbar>*{
+    margin-right: 30px;
+    text-decoration: none;
     color: lightslategray;
+    align-content: left;
 }
 
 .tool > button{
