--- a/file/templates/file/index.html
+++ b/file/templates/file/index.html
@@ -10,10 +10,10 @@ file
     {% csrf_token %}
     <input type="file" name="upfile" id="">
     <p>or use url,we download for you</p>
-    <input type="text" name="url" id="" placeholder="url"> 
+    <textarea name="url" id="" cols="30" rows="5" placeholder="url"></textarea>
     <p>and give it a short name</p>
-    <input type="text" name="fname" placeholder="you file name" id="">
-    <input type="submit" value="save">
+    <input type="text" name="fname" placeholder="you file name" id="" class="formtext">
+    <input type="submit" value="save" class="formsubmit">
 </form>
 
 {% load static %}
