--- a/note/static/index.css
+++ b/note/static/index.css
@@ -18,7 +18,7 @@ body{
 
 #main{
     min-width: 360px;
-    padding-left: 27px;
+    padding-left: 6%;
 }
 
 #userstatus{
@@ -143,7 +143,7 @@ form{
 }
 #logbar{
     display: none;
-    background-color: lightgray;
+    background-color: lightcyan;
     position:absolute;
     left: 0;
     font-size: small;
